# installation

./: Cargo.toml
src/: lib.rs  main.rs
src/python/: get_version_from_cli.rs  get_version_info_from_pyo3_py_token.rs  get_version_info_via_pyo3.rs  mod.rs  version_info.rs
src/python/releases/: artifact.rs  get_installation_url.rs  mod.rs
