[package]
name = "installation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
pyo3 = { version = "0", optional = true, features = ["auto-initialize"] }
#dict_derive = { version = "0", optional = true }

[features]
default = ["python", "pyo3"]
python = []
pyo3 = ["python", "dep:pyo3",
#"dep:dict_derive"
]
